--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,11 +1,13 @@
 <h1>Holiday Planer</h1>
 <ng-container *ngFor="let month of this.calendarService.months">
   <h2 class="disable-text-selection">{{month.name}}</h2>
-  <div class="card">
-    <div class="flex align-items-stretch flex-wrap card-container" style="min-height: 200px">
-      <div *ngFor="let day of month.days" class="flex align-items-center justify-content-center font-bold text-white border-round m-2" style="min-width: 200px; min-height: 50px">
+
+  <div class="grid">
+    <ng-container *ngFor="let day of month.days; first as isFirst">
+      <div *ngIf="isFirst; else noOffset" class="'col-offset-4'"></div>
+      <ng-template #noOffset [ngClass]="[0,6].includes(day.date.getDay()) ? 'col-1' : 'col-2'">
         <app-day [day]="day"></app-day>
-      </div>
-    </div>
+      </ng-template>
+    </ng-container>
   </div>
 </ng-container>
