--- a/src/app/day/day.component.scss
+++ b/src/app/day/day.component.scss
@@ -1,11 +1,11 @@
 .card-selected {
-  background-color: orange;
+  background-color: orange !important;
 }
 
 .card-weekend {
-  border: 2px solid red;
+  border: 5px solid red;
 }
 
 .card-freeday {
-  color: purple;
+  border: 5px solid blue;
 }
