--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<div class="ml-5 mr-5">
-  <app-calendar></app-calendar>
+<div>
+  <app-navbar></app-navbar>
+  <div class="ml-5 mr-5">
+    <app-calendar></app-calendar>
+  </div>
 </div>
+
