--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
-@import "primeng/resources/themes/vela-blue/theme.css";
+@Import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
 @import "primeflex/primeflex.css";
 
-html, body { height: 100%; font-family: var(--font-family); }
+html, body {
+  height: 100%;
+  font-family: var(--font-family);
+}
 body { margin: 0; }
 
 .disable-text-selection {
