--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,7 +6,6 @@
     <h1>Holiday Planner</h1>
   </div>
   <div class="flex justify-content-center align-items-center mr-1">
-    <p-inputNumber [min]="1" [max]="40" [(ngModel)]="workfreeDays"></p-inputNumber>
-    <p-inputNumber [min]="1" [max]="40" [(ngModel)]="usableWorkfreeDays" [disabled]="true"></p-inputNumber>
+    <label>Already used days: {{calendarService.usedDays}}</label>
   </div>
 </div>
