--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,8 @@
 @Import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
 @import "primeflex/primeflex.css";
+@import "primeicons/primeicons.css";
+@import "theme";
 
 html, body {
   height: 100%;
